// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withTwrn android should not render media queries on android 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={Object {}}
    testID="view"
  />
</View>
`;

exports[`withTwrn ios should not render media queries 1`] = `
<View
  style={Object {}}
  testID="view"
/>
`;

exports[`withTwrn should render correctly the focus: pseudo selector: focus: - blurred 1`] = `
<TextInput
  allowFontScaling={true}
  rejectResponderTermination={true}
  style={Object {}}
  testID="text-input"
  underlineColorAndroid="transparent"
/>
`;

exports[`withTwrn should render correctly the focus: pseudo selector: focus: - focused 1`] = `
<TextInput
  allowFontScaling={true}
  rejectResponderTermination={true}
  style={
    Object {
      "backgroundColor": "#ffffff",
    }
  }
  testID="text-input"
  underlineColorAndroid="transparent"
/>
`;

exports[`withTwrn should render correctly the focus: pseudo selector: focus: - idle 1`] = `
<TextInput
  allowFontScaling={true}
  rejectResponderTermination={true}
  style={Object {}}
  testID="text-input"
  underlineColorAndroid="transparent"
/>
`;

exports[`withTwrn should render correctly the hover: pseudo selector: hover: - hovered 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
    }
  }
  testID="view"
/>
`;

exports[`withTwrn should render correctly the hover: pseudo selector: hover: - idle 1`] = `
<View
  style={Object {}}
  testID="view"
/>
`;

exports[`withTwrn should render correctly the hover: pseudo selector: hover: - no-hover 1`] = `
<View
  style={Object {}}
  testID="view"
/>
`;

exports[`withTwrn should render correctly with no styles 1`] = `
<View
  style={Object {}}
  testID="view"
/>
`;

exports[`withTwrn should render regular react-native styles 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ff0000",
    }
  }
  testID="view"
/>
`;

exports[`withTwrn should render regular react-native styles 2`] = `
<View
  style={
    Object {
      "backgroundColor": "#ff0000",
      "padding": 10,
    }
  }
  testID="view"
/>
`;

exports[`withTwrn should render tw-rn base and regular react-native styles correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "padding": 10,
    }
  }
  testID="view"
/>
`;

exports[`withTwrn should render tw-rn base styles correctly in ios 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
    }
  }
  testID="view"
/>
`;

exports[`withTwrn web should not render on SSR 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`withTwrn web should render media queries on web 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ff0000",
    }
  }
  testID="view"
/>
`;

exports[`withTwrn web should render non media queries styles along media queries styles 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ff0000",
      "padding": 4,
    }
  }
  testID="view"
/>
`;

exports[`withTwrn web should respect queries order styles 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#00ff00",
      "padding": 4,
    }
  }
  testID="view"
/>
`;
